tooltips, bugfixes, tweaks

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -4413,30 +4413,55 @@
     KWA_cn_ADJ:0 "Imperial Japanese"
     KWA_an_ADJ:0 "Imperial Japanese"
 
-    HWI_ni:0 "Kingdom of Hawaii"
-    HWI_ni_DEF:0 "The Kingdom of Hawaii"
-    HWI_ds:0 "Kingdom of Hawaii"
-    HWI_ds_DEF:0 "The Kingdom of Hawaii"
-    HWI_rc:0 "Kingdom of Hawaii"
-    HWI_rc_DEF:0 "The Kingdom of Hawaii"
-    HWI_an:0 "Kingdom of Hawaii"
-    HWI_an_DEF:0 "The Kingdom of Hawaii"
-    HWI_cn:0 "Kingdom of Hawaii"
-    HWI_cn_DEF:0 "The Kingdom of Hawaii"
-    HWI_lb:0 "Kingdom of Hawaii"
-    HWI_lb_DEF:0 "The Kingdom of Hawaii"
-    HWI_ss:0 "Kingdom of Hawaii"
-    HWI_ss_DEF:0 "The Kingdom of Hawaii"
-    HWI_jc:0 "Revolutionary Federation of Hawaii"
-    HWI_jc_DEF:0 "The Revolutionary Federation of Hawaii"
-    HWI_ni_ADJ:0 "Hawaiian"
-    HWI_rc_ADJ:0 "Hawaiian"
-    HWI_lb_ADJ:0 "Hawaiian"
-    HWI_ss_ADJ:0 "Hawaiian"
-    HWI_jc_ADJ:0 "Hawaiian"
-    HWI_ds_ADJ:0 "Hawaiian"
-    HWI_cn_ADJ:0 "Hawaiian"
-    HWI_an_ADJ:0 "Hawaiian"
+    HWI_ni:0 "Kingdom of Owyhee"
+    HWI_ni_DEF:0 "The Kingdom of Owyhee"
+    HWI_ds:0 "Kingdom of Owyhee"
+    HWI_ds_DEF:0 "The Kingdom of Owyhee"
+    HWI_rc:0 "Kingdom of Owyhee"
+    HWI_rc_DEF:0 "The Kingdom of Owyhee"
+    HWI_an:0 "Kingdom of Owyhee"
+    HWI_an_DEF:0 "The Kingdom of Owyhee"
+    HWI_cn:0 "Kingdom of Owyhee"
+    HWI_cn_DEF:0 "The Kingdom of Owyhee"
+    HWI_lb:0 "Kingdom of Owyhee"
+    HWI_lb_DEF:0 "The Kingdom of Owyhee"
+    HWI_ss:0 "Kingdom of Owyhee"
+    HWI_ss_DEF:0 "The Kingdom of Owyhee"
+    HWI_jc:0 "Revolutionary Federation of Owyhee"
+    HWI_jc_DEF:0 "The Revolutionary Federation of Owyhee"
+    HWI_ni_ADJ:0 "Owyhee"
+    HWI_rc_ADJ:0 "Owyhee"
+    HWI_lb_ADJ:0 "Owyhee"
+    HWI_ss_ADJ:0 "Owyhee"
+    HWI_jc_ADJ:0 "Owyhee"
+    HWI_ds_ADJ:0 "Owyhee"
+    HWI_cn_ADJ:0 "Owyhee"
+    HWI_an_ADJ:0 "Owyhee"
+
+    NHW_ni:0 "Kingdom of Taua'i"
+    NHW_ni_DEF:0 "The Kingdom of Taua'i"
+    NHW_ds:0 "Kingdom of Taua'i"
+    NHW_ds_DEF:0 "The Kingdom of Taua'i"
+    NHW_rc:0 "Kingdom of Taua'i"
+    NHW_rc_DEF:0 "The Kingdom of Taua'i"
+    NHW_an:0 "Kingdom of Taua'i"
+    NHW_an_DEF:0 "The Kingdom of Taua'i"
+    NHW_cn:0 "Kingdom of Taua'i"
+    NHW_cn_DEF:0 "The Kingdom of Taua'i"
+    NHW_lb:0 "Kingdom of Taua'i"
+    NHW_lb_DEF:0 "The Kingdom of Taua'i"
+    NHW_ss:0 "Kingdom of Taua'i"
+    NHW_ss_DEF:0 "The Kingdom of Taua'i"
+    NHW_jc:0 "Kingdom of Taua'i"
+    NHW_jc_DEF:0 "The Kingdom of Taua'i"
+    NHW_ni_ADJ:0 "Taua'i"
+    NHW_rc_ADJ:0 "Taua'i"
+    NHW_lb_ADJ:0 "Taua'i"
+    NHW_ss_ADJ:0 "Taua'i"
+    NHW_jc_ADJ:0 "Taua'i"
+    NHW_ds_ADJ:0 "Taua'i"
+    NHW_cn_ADJ:0 "Taua'i"
+    NHW_an_ADJ:0 "Taua'i"
 
     MAL_ni:0 "Malay Republic"
     MAL_ni_DEF:0 "The Malay Republic"
@@ -7073,31 +7098,6 @@
     OMS_ds_ADJ:0 "Russian"
     OMS_cn_ADJ:0 "Russian"
     OMS_an_ADJ:0 "Russian"
-
-    PSK_ni:0 "Surgut Landship Brigade"
-    PSK_ni_DEF:0 "The Surgut Landship Brigade"
-    PSK_ds:0 "Surgut Landship Brigade"
-    PSK_ds_DEF:0 "The Surgut Landship Brigade"
-    PSK_rc:0 "Surgut Landship Brigade"
-    PSK_rc_DEF:0 "The Surgut Landship Brigade"
-    PSK_an:0 "Surgut Landship Brigade"
-    PSK_an_DEF:0 "The Surgut Landship Brigade"
-    PSK_cn:0 "Surgut Landship Brigade"
-    PSK_cn_DEF:0 "The Surgut Landship Brigade"
-    PSK_lb:0 "Surgut Landship Brigade"
-    PSK_lb_DEF:0 "The Surgut Landship Brigade"
-    PSK_ss:0 "Surgut Landship Brigade"
-    PSK_ss_DEF:0 "The Surgut Landship Brigade"
-    PSK_jc:0 "Surgut Landship Brigade"
-    PSK_jc_DEF:0 "The Surgut Landship Brigade"
-    PSK_ni_ADJ:0 "Russian"
-    PSK_rc_ADJ:0 "Russian"
-    PSK_lb_ADJ:0 "Russian"
-    PSK_ss_ADJ:0 "Russian"
-    PSK_jc_ADJ:0 "Russian"
-    PSK_ds_ADJ:0 "Russian"
-    PSK_cn_ADJ:0 "Russian"
-    PSK_an_ADJ:0 "Russian"
 
     ALW_ni:0 "Alawite State"
     ALW_ni_DEF:0 "The State of Alawite State"
