--- a/localisation/english/PB_social_development_l_english.yml
+++ b/localisation/english/PB_social_development_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
-
+	###################
+	### MAP MODE
+	###################
   MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE_NAME: "Social Development" 
   MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE: "§YSocial Development map mode§!"
   MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE_DESCRIPTION: "Displays the current §YSocial Development§! statuses and levels.."
@@ -25,7 +27,9 @@
 	social_development_map_mode_5_tt: "§YCivilization Level§! map"
 	social_development_map_mode_5_tooltip: "§H[From.Controller.GetNameWithFlag]§! current §YCivilization Level§! is: §Y[FROM.controller.GetCurrentCivilizationStatusLevel]§!"
 	social_development_map_mode_5_tooltip_delayed: "Their current progression is §H[?FROM.controller.social_development_civilization_status_count|+%%]§! towards next level"
-
+	###################
+	### GUI
+	###################
   socdev_menu_button_tt: "Click to open the §YSocial Development§! menu"
 
   social_development_poverty_rate_progress_tt: "Our §YPoverty Status§!:\nHas a value of §H[?social_development_poverty_rate_count|+%%]§! and is [get_poverty_rate_growth_type]\nIt is [get_progress_regress_poverty_rate] at a §Ybase monthly rate§! of [?social_development_poverty_rate_monthly_change|=+%%] and additional [?modifier@social_development_poverty_rate_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_poverty_rate]§!."
@@ -48,3 +52,104 @@
 
 	socdev_minimal_level: "§RMinimal Possible Level§!"
 	socdev_maximum_level: "§GMaximum Possible Level§!"
+
+	###################
+	### TOOLTIPS
+	###################
+
+	increase_poverty_rate_level_tt: "§YPoverty Status§! will §Gprogress§! to the next tier"
+	decrease_poverty_rate_level_tt: "§YPoverty Status§! will §Rregress§! to the previous tier
+	increase_industralization_level_tt: "§YIndustrialization§! will §Gprogress§! to the next tier"
+	decrease_industralization_level_tt: "§YIndustrialization§! will §Rregress§! to the previous tier
+	increase_literacy_level_tt: "§YLiteracy§! will §Gprogress§! to the next tier"
+	decrease_literacy_level_tt: "§YLiteracy§! will §Rregress§! to the previous tier
+	increase_economic_health_level_tt: "§YEconomic Health§! will §Gprogress§! to the next tier"
+	decrease_economic_health_level_tt: "§YEconomic Health§! will §Rregress§! to the previous tier
+	increase_military_modernization_level_tt: "§YMilitary Modernization§! will §Gprogress§! to the next tier"
+	decrease_military_modernization_level_tt: "§YMilitary Modernization§! will §Rregress§! to the previous tier
+	increase_civilization_status_level_tt: "§YCivilization Level§! will §Gprogress§! to the next tier"
+	decrease_civilization_status_level_tt: "§YCivilization Level§! will §Rregress§! to the previous tier
+
+	poverty_rate_growth_progress_small_tt: "§YPoverty Status§! will §Gprogress§! by §G2%§!"
+	poverty_rate_growth_progress_moderate_tt: "§YPoverty Status§! will §Gprogress§! by §G4%§!"
+	poverty_rate_growth_progress_high_tt: "§YPoverty Status§! will §Gprogress§! by §G6%§!"
+	poverty_rate_growth_regress_small_tt: "§YPoverty Status§! will §Rregress§! by §R-2%§!"
+	poverty_rate_growth_regress_moderate_tt: "§YPoverty Status§! will §Rregress§! by §R-4%§!"
+	poverty_rate_growth_regress_high_tt: "§YPoverty Status§! will §Rregress§! by §R-6%§!"
+
+	industrialization_growth_progress_small_tt: "§YIndustrialization§! will §Gprogress§! by §G2%§!"
+	industrialization_growth_progress_moderate_tt: "§YIndustrialization§! will §Gprogress§! by §G4%§!"
+	industrialization_growth_progress_high_tt: "§YIndustrialization§! will §Gprogress§! by §G6%§!"
+	industrialization_growth_regress_small_tt: "§YIndustrialization§! will §Rregress§! by §R-2%§!"
+	industrialization_growth_regress_moderate_tt: "§YIndustrialization§! will §Rregress§! by §R-4%§!"
+	industrialization_growth_regress_high_tt: "§YIndustrialization§! will §Rregress§! by §R-6%§!"
+
+	literacy_growth_progress_small_tt: "§YLiteracy§! will §Gprogress§! by §G2%§!"
+	literacy_growth_progress_moderate_tt: "§YLiteracy§! will §Gprogress§! by §G4%§!"
+	literacy_growth_progress_high_tt: "§YLiteracy§! will §Gprogress§! by §G6%§!"
+	literacy_growth_regress_small_tt: "§YLiteracy§! will §Rregress§! by §R-2%§!"
+	literacy_growth_regress_moderate_tt: "§YLiteracy§! will §Rregress§! by §R-4%§!"
+	literacy_growth_regress_high_tt: "§YLiteracy§! will §Rregress§! by §R-6%§!"
+
+	economic_health_growth_progress_small_tt: "§YEconomic Health§! will §Gprogress§! by §G2%§!"
+	economic_health_growth_progress_moderate_tt: "§YEconomic Health§! will §Gprogress§! by §G4%§!"
+	economic_health_growth_progress_high_tt: "§YEconomic Health§! will §Gprogress§! by §G6%§!"
+	economic_health_growth_regress_small_tt: "§YEconomic Health§! will §Rregress§! by §R-2%§!"
+	economic_health_growth_regress_moderate_tt: "§YEconomic Health§! will §Rregress§! by §R-4%§!"
+	economic_health_growth_regress_high_tt: "§YEconomic Health§! will §Rregress§! by §R-6%§!"
+
+	military_modernization_growth_progress_small_tt: "§YMilitary Modernization§! will §Gprogress§! by §G2%§!"
+	military_modernization_growth_progress_moderate_tt: "§YMilitary Modernization§! will §Gprogress§! by §G4%§!"
+	military_modernization_growth_progress_high_tt: "§YMilitary Modernization§! will §Gprogress§! by §G6%§!"
+	military_modernization_growth_regress_small_tt: "§YMilitary Modernization§! will §Rregress§! by §R-2%§!"
+	military_modernization_growth_regress_moderate_tt: "§YMilitary Modernization§! will §Rregress§! by §R-4%§!"
+	military_modernization_growth_regress_high_tt: "§YMilitary Modernization§! will §Rregress§! by §R-6%§!"
+
+	civilization_status_growth_progress_small_tt: "§YCivilization Level§! will §Gprogress§! by §G2%§!"
+	civilization_status_growth_progress_moderate_tt: "§YCivilization Level§! will §Gprogress§! by §G4%§!"
+	civilization_status_growth_progress_high_tt: "§YCivilization Level§! will §Gprogress§! by §G6%§!"
+	civilization_status_growth_regress_small_tt: "§YCivilization Level§! will §Rregress§! by §R-2%§!"
+	civilization_status_growth_regress_moderate_tt: "§YCivilization Level§! will §Rregress§! by §R-4%§!"
+	civilization_status_growth_regress_high_tt: "§YCivilization Level§! will §Rregress§! by §R-6%§!"
+
+	poverty_rate_growth_progress_monthly_small_tt: "§YPoverty Status§! will §Gincrease§! by §G0.25% monthly§!"
+	poverty_rate_growth_progress_monthly_moderate_tt: "§YPoverty Status§! will §Gincrease§! by §G0.5% monthly§!"
+	poverty_rate_growth_progress_monthly_high_tt: "§YPoverty Status§! will §Gincrease§! by §G0.75% monthly§!"
+	poverty_rate_growth_regress_small_tt: "§YPoverty Status§! will §Rdecrease§! by §R-0.25% monthly§!"
+	poverty_rate_growth_regress_moderate_tt: "§YPoverty Status§! will §Rdecrease§! by §R-0.5% monthly§!"
+	poverty_rate_growth_regress_high_tt: "§YPoverty Status§! will §Rdecrease§! by §R-0.75% monthly§!"
+
+	industrialization_growth_progress_monthly_small_tt: "§YIndustrialization§! will §Gincrease§! by §G0.25% monthly§!"
+	industrialization_growth_progress_monthly_moderate_tt: "§YIndustrialization§! will §Gincrease§! by §G0.5% monthly§!"
+	industrialization_growth_progress_monthly_high_tt: "§YIndustrialization§! will §Gincrease§! by §G0.75% monthly§!"
+	industrialization_growth_regress_small_tt: "§YIndustrialization§! will §Rdecrease§! by §R-0.25% monthly§!"
+	industrialization_growth_regress_moderate_tt: "§YIndustrialization§! will §Rdecrease§! by §R-0.5% monthly§!"
+	industrialization_growth_regress_high_tt: "§YIndustrialization§! will §Rdecrease§! by §R-0.75% monthly§!"
+
+	literacy_growth_progress_monthly_small_tt: "§YLiteracy§! will §Gincrease§! by §G0.25% monthly§!"
+	literacy_growth_progress_monthly_moderate_tt: "§YLiteracy§! will §Gincrease§! by §G0.5% monthly§!"
+	literacy_growth_progress_monthly_high_tt: "§YLiteracy§! will §Gincrease§! by §G0.75% monthly§!"
+	literacy_growth_regress_small_tt: "§YLiteracy§! will §Rdecrease§! by §R-0.25% monthly§!"
+	literacy_growth_regress_moderate_tt: "§YLiteracy§! will §Rdecrease§! by §R-0.5% monthly§!"
+	literacy_growth_regress_high_tt: "§YLiteracy§! will §Rdecrease§! by §R-0.75% monthly§!"
+
+	economic_health_growth_progress_monthly_small_tt: "§YEconomic Health§! will §Gincrease§! by §G0.25% monthly§!"
+	economic_health_growth_progress_monthly_moderate_tt: "§YEconomic Health§! will §Gincrease§! by §G0.5% monthly§!"
+	economic_health_growth_progress_monthly_high_tt: "§YEconomic Health§! will §Gincrease§! by §G0.75% monthly§!"
+	economic_health_growth_regress_small_tt: "§YEconomic Health§! will §Rdecrease§! by §R-0.25% monthly§!"
+	economic_health_growth_regress_moderate_tt: "§YEconomic Health§! will §Rdecrease§! by §R-0.5% monthly§!"
+	economic_health_growth_regress_high_tt: "§YEconomic Health§! will §Rdecrease§! by §R-0.75% monthly§!"
+
+	military_modernization_growth_progress_monthly_small_tt: "§YMilitary Modernization§! will §Gincrease§! by §G0.25% monthly§!"
+	military_modernization_growth_progress_monthly_moderate_tt: "§YMilitary Modernization§! will §Gincrease§! by §G0.5% monthly§!"
+	military_modernization_growth_progress_monthly_high_tt: "§YMilitary Modernization§! will §Gincrease§! by §G0.75% monthly§!"
+	military_modernization_growth_regress_small_tt: "§YMilitary Modernization§! will §Rdecrease§! by §R-0.25% monthly§!"
+	military_modernization_growth_regress_moderate_tt: "§YMilitary Modernization§! will §Rdecrease§! by §R-0.5% monthly§!"
+	military_modernization_growth_regress_high_tt: "§YMilitary Modernization§! will §Rdecrease§! by §R-0.75% monthly§!"
+
+	civilization_status_growth_progress_monthly_small_tt: "§YCivilization Level§! will §Gincrease§! by §G0.25% monthly§!"
+	civilization_status_growth_progress_monthly_moderate_tt: "§YCivilization Level§! will §Gincrease§! by §G0.5% monthly§!"
+	civilization_status_growth_progress_monthly_high_tt: "§YCivilization Level§! will §Gincrease§! by §G0.75% monthly§!"
+	civilization_status_growth_regress_small_tt: "§YCivilization Level§! will §Rdecrease§! by §R-0.25% monthly§!"
+	civilization_status_growth_regress_moderate_tt: "§YCivilization Level§! will §Rdecrease§! by §R-0.5% monthly§!"
+	civilization_status_growth_regress_high_tt: "§YCivilization Level§! will §Rdecrease§! by §R-0.75% monthly§!"
