some small additions

--- a/localisation/english/PB_Useful_Loc_l_english.yml
+++ b/localisation/english/PB_Useful_Loc_l_english.yml
@@ -71,6 +71,15 @@
  has_jacobin_government_group_tt_NOT: "$is_not_in_ideologic_group$ §OJacobin§! ideological group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
 
 
+  ## STATES ##
+ is_megacity_state_tt: "Is §YMegacity§! state"
+ is_megacity_state_tt_NOT: "Is not §YMegacity§! state"
+ is_urban_state_tt: "Is §YUrban§! state"
+ is_urban_state_tt_NOT: "Is not §YUrban§! state"
+ is_rural_state_tt: "Is §YRural§! state"
+ is_rural_state_tt_NOT: "Is not §YRural§! state"
+ has_coastal_state_tt: "Has §YCoastal§! state"
+ has_coastal_state_tt_NOT: "Does not have §YCoastal§! state"
 
 
 
