Germany & Basque Releasable Decisions

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -80,6 +80,28 @@
   annexation_decision_galicia: "The Fate of Galicia"
   annexation_decision_galicia_desc: "The region of Galicia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
 
+  annexation_luxembourg: "The Fate of Luxembourg"
+  annexation_luxembourg_desc: "The small state of Luxembourg has been brought under our control as our troops occupy the region. A charming reminder of how Europe used to be, the country boasts at least two taverns, one humorous dwarf, and a shop that makes little things made out of straw. We must now decide what to do with it."
+  annexation.1042.a: "I do quite like the sound of that shop selling little things made out of straw."
+  annexation.1042.b: "Give it to the Germans"
+
+  annexation_decision_germany: "The Fate of Germany"
+  annexation_decision_luxembourg: "The Fate of Luxembourg"
+  annexation_decision_rhineland: "The Fate of the Rhineland"
+  annexation_decision_wurttemberg: "The Fate of Wurttemberg"
+  annexation_decision_bavaria: "The Fate of Bavaria"
+  annexation_decision_austria: "The Fate of Austria"
+  annexation_decision_saxony: "The Fate of Saxony"
+  annexation_decision_hannover: "The Fate of Hannover"
+  annexation_decision_brandenburg_prussia: "The Fate of Brandenburg-Prussia"
+  annexation_decision_bohemia: "The Fate of Bohemia"
+  annexation_decision_slovenia: "The Fate of Slovenia"
+  annexation_decision_friaul: "The Fate of Friaul"
+  annexation_decision_alsace: "The Fate of Alsace"
+  annexation_decision_silesia: "The Fate of Silesia"
+  annexation_decision_sudetenland: "The Fate of the Sudetenland"
+  annexation_decision_rijeka: "The Fate of Rijeka"
+
     # AMERICA
 
   annexation_decision_acadia: "Fate of Acadia"
