rio grande name fix

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2592,21 +2592,21 @@
     YUC_cn_ADJ:0 "Yucatec"
     YUC_an_ADJ:0 "Yucatec"
 
-    RGD_ni:0 "Rio Grande"
+    RGD_ni:0 "Republic of the Rio Grande"
     RGD_ni_DEF:0 "the Republic of Rio Grande"
-    RGD_rc:0 "Rio Grande"
+    RGD_rc:0 "Republic of the Rio Grande"
     RGD_rc_DEF:0 "the Republic of Rio Grande"
-    RGD_lb:0 "Rio Grande"
+    RGD_lb:0 "Republic of the Rio Grande"
     RGD_lb_DEF:0 "the Republic of Rio Grande"
-    RGD_ss:0 "Rio Grande"
+    RGD_ss:0 "Republic of the Rio Grande"
     RGD_ss_DEF:0 "the Republic of Rio Grande"
-    RGD_jc:0 "Rio Grande"
+    RGD_jc:0 "Republic of the Rio Grande"
     RGD_jc_DEF:0 "the Republic of Rio Grande"
-    RGD_an:0 "Rio Grande"
+    RGD_an:0 "Republic of the Rio Grande"
     RGD_an_DEF:0 "the Republic of Rio Grande"
-    RGD_ds:0 "Rio Grande"
+    RGD_ds:0 "Republic of the Rio Grande"
     RGD_ds_DEF:0 "the Republic of Rio Grande"
-    RGD_cn:0 "Rio Grande"
+    RGD_cn:0 "Republic of the Rio Grande"
     RGD_cn_DEF:0 "the Republic of Rio Grande"
     RGD_ni_ADJ:0 "Norte Mexican"
     RGD_rc_ADJ:0 "Norte Mexican"
