new mexican cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -541,12 +541,21 @@ PB_culture_129: "Appalachian"
 PB_culture_130: "Mexican"
 PB_culture_131: "Midwestern"
 PB_culture_132: "New Englander"
-PB_culture_133: "Nortemexicano"
+PB_culture_133: "Neoleonés"
+PB_culture_290: "Neonavarro"
+PB_culture_295: "Tejano"
+PB_culture_301: "Tapatío"
+PB_culture_296: "Californio"
+PB_culture_297: "Indio"
+PB_culture_298: "Valleño"
+PB_culture_299: "Vaquero"
+PB_culture_293: "Galleónicos"
+PB_culture_300: "Navajo"
 PB_culture_134: "Old Dixie"
 PB_culture_135: "Quebecois"
 PB_culture_136: "Seminole"
 PB_culture_137: "Texan"
-PB_culture_138: "Yucatec"
+PB_culture_138: "Yucateco"
 PB_culture_139: "Marooner"
 PB_culture_140: "Comanche"
 PB_culture_141: "Apache"
