sveaborg + prussia states

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -84,7 +84,8 @@
  STATE_83: "Kreischgebiet"
  STATE_84: "Siebenbürgen"
  STATE_85: "Westpreußen"
- STATE_86: "Poznan"
+ STATE_86: "Wielkopolska"
+ STATE_86_german: "Wartheland"
  STATE_87: "Lodz"
  STATE_88: "Kraków"
  STATE_89: "Stanisławów"
@@ -1454,3 +1455,8 @@
  STATE_1453: "Adelie Land Interior"
  STATE_1454: "Victoria Land Interior"
  STATE_1455: "Bône"
+ STATE_1456: "Sveaborg"
+ STATE_1457: "Weichselland"
+ STATE_1458: "Masuren"
+ STATE_1459: "Danzig"
+ STATE_1460: "Lazistan"
