--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -283,9 +283,11 @@
  VICTORY_POINTS_279: "Bromberg"
  VICTORY_POINTS_362: "Danzig"
  VICTORY_POINTS_3295: "Thorn"
-#86 - POZNAN
+#86 - WIELKOPOLSKA
  VICTORY_POINTS_11232: "Piła"
+ VICTORY_POINTS_11232_german: "Schneidemühl"
  VICTORY_POINTS_6558: "Poznań"
+ VICTORY_POINTS_6558_german: "Posen"
 #87 - LODZ
  VICTORY_POINTS_9508: "Łódź"
 #88 - KRAKOW
