POR CHR thinking

--- a/localisation/english/PB_country_specific/PB_Peru_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Peru_l_english.yml
@@ -37,3 +37,12 @@
 
   PB_CHR_The_Imbecile:0 "The Imbecile"
   PB_CHR_The_Imbecile_desc:0 "WIP"
+
+  Hispan_Succesion.1.t:0 "Death of Alfonso XII"
+  Hispan_Succesion.1.d:0 "It was a quiet night. The guards stood at their posts, ready to defend the king and his court at all costs. It had been a stressful life for Alfonso, ruling over half a continent, let alone one that had been in open rebellion nearly 50 years ago. Over the years, his health deteriorated; he coughed blood—lots of it—coating his entire room red. As he lay there, not a sound or disturbance in his bloodstained room, there was no acknowledgment of the thousands he had sacrificed to maintain the empire. He was a pragmatist, unwilling to disturb the fragile peace, yet adamant about preserving it. He had kept his distant cousin Jaime out of the spotlight long enough to maintain a fragile balance between the north and the south. But now, all that was left of him was an old man waiting for his final breath. And then, it came."
+  Hispan_Succesion.1.a:0 "Plus Ultra"
+
+  Hispan_Succesion.2.t:0 "The Second Spanish Succession War"
+  Hispan_Succesion.2.d:0 "Since the first Spanish Succession War, familial infighting had become commonplace. No matter the creed, blood, or bonds, that was always the case. Jaime III and his Requetes had always been a presence in the United Viceroyalties ever since the monarchy in Spain collapsed—hopping from one host to another like a leech. And as expected, he showed his intent to usurp the legitimate throne. They say blood is thicker than water, but in war, all you do is spill blood."
+  Hispan_Succesion.2.a:0 "And so, it begins."
+
