Russia's scientists portraits

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -153,6 +153,7 @@
   RUS_zofia_tesla: "Zofia Tesla"
   RUS_nikola_tesla: "Nikola Tesla"
   # Biochem #
+  RUS_vladimir_vernadski: "Vladimir Vernadski"
   RUS_nikolai_vavilov: "Nikolai Vavilov"
   RUS_alexander_oparin: "Alexander Oparin"
   ### OPERATIVES ###
