--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -464,6 +464,8 @@
 
  gw_automat_archetype:0 "Duopods"
  gw_automat_0:0 "Great War Automat"
+ gw_automat_chassis:0 "Great War Automat Chassis"
+ gw_automat_chassis_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
  gw_automat_chassis_0:0 "Great War Automat Chassis"
  gw_automat_0_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
  gw_automat_chassis_0_desc:0 "$gw_automat_0_desc$"
@@ -483,6 +485,8 @@
 
  tripod_automat_archetype:0  "Tripods"
  tripod_automat_0:0 "Tripod I"
+ tripod_automat_chassis:0 "Tripod Automat Chassis"
+ tripod_automat_chassis_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadropods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadropod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadropod, nor does it have the speed or low production cost of the Duopod."
  tripod_automat_chassis_0:0 "Tripod I Chassis"
  tripod_automat_0_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadropods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadropod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadropod, nor does it have the speed or low production cost of the Duopod."
  tripod_automat_chassis_0_desc:0 "$tripod_automat_0_desc$"
@@ -497,6 +501,8 @@
 
  quadropod_automat_archetype:0 "Quadropod"
  quadropod_automat_0:0 "Quadropod I"
+ quadropod_automat_chassis:0 "Quadropod Automat Chassis"
+ quadropod_automat_chassis_desc:0 "Few things can truly spit in the face of God, but one can easily count the Quadropod among these god-smiting things. Solving the Great War issue of the automats with the answer of \"more legs, more armor\", the Quadropod is simply a walking battleship, equiped with guns previously used on cruisers. Still the design has flaws, as the Quadropod currently stands as a big, slow object, making it a prime target for artillery and planes." 
  quadropod_automat_chassis_0:0 "Quadropod I Chassis"
  quadropod_automat_0_desc:0 "Few things can truly spit in the face of God, but one can easily count the Quadropod among these god-smiting things. Solving the Great War issue of the automats with the answer of \"more legs, more armor\", the Quadropod is simply a walking battleship, equiped with guns previously used on cruisers. Still the design has flaws, as the Quadropod currently stands as a big, slow object, making it a prime target for artillery and planes." 
  quadropod_automat_chassis_0_desc:0 "$quadropod_automat_0_desc$" 
