missing loc fixes

--- a/localisation/english/replace/vanilla_modifiericons_l_english.yml
+++ b/localisation/english/replace/vanilla_modifiericons_l_english.yml
@@ -614,15 +614,15 @@
  MODIFIER_LICENSE_INFANTRY_EQ_TECH_DIFFERENCE_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed from technology difference for Infantry Equipment"
  MODIFIER_LICENSE_ARTILLERY_EQ_TECH_DIFFERENCE_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed from technology difference for Artillery Equipment"
  MODIFIER_LICENSE_LIGHT_TANK_EQ_TECH_DIFFERENCE_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed from technology difference for Light Tank Equipment"
- MODIFIER_LICENSE_ANTI_TANK_EQ_TECH_DIFFERENCE_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed from technology difference for Anti-Tank Equipment"
+ MODIFIER_LICENSE_ANTI_TANK_EQ_TECH_DIFFERENCE_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed from technology difference for Anti-Landship Equipment"
  MODIFIER_LICENSE_INFANTRY_EQ_PRODUCTION_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed for Infantry Equipment"
  MODIFIER_LICENSE_ARTILLERY_EQ_PRODUCTION_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed for Artillery Equipment"
  MODIFIER_LICENSE_LIGHT_TANK_EQ_PRODUCTION_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed for Light Tank Equipment"
- MODIFIER_LICENSE_ANTI_TANK_EQ_PRODUCTION_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed for Anti-Tank Equipment"
+ MODIFIER_LICENSE_ANTI_TANK_EQ_PRODUCTION_SPEED_FACTOR:0 "£production_licence_speed_texticon  License production speed for Anti-Landship Equipment"
  MODIFIER_LICENSE_INFANTRY_EQ_COST_FACTOR:0 "£production_licence_cost_texticon  License purchase cost for Infantry Equipment"
  MODIFIER_LICENSE_ARTILLERY_EQ_COST_FACTOR:0 "£production_licence_cost_texticon  License purchase cost for Artillery Equipment"
  MODIFIER_LICENSE_LIGHT_TANK_EQ_COST_FACTOR:0 "£production_licence_cost_texticon  License purchase cost for Light Tank Equipment"
- MODIFIER_LICENSE_ANTI_TANK_EQ_COST_FACTOR:0 "£production_licence_cost_texticon  License purchase cost for Anti-Tank Equipment"
+ MODIFIER_LICENSE_ANTI_TANK_EQ_COST_FACTOR:0 "£production_licence_cost_texticon  License purchase cost for Anti-Landship Equipment"
  MODIFIER_EQUIPMENT_CONVERSION_SPEED:0 "£equipment_conversion_texticon  Equipment conversion speed"
  MODIFIER_ACCLIMATIZATION_COLD_CLIMATE_GAIN_FACTOR:0 "£temperature_cold_texticon  Cold acclimatization gain factor"
  MODIFIER_ACCLIMATIZATION_HOT_CLIMATE_GAIN_FACTOR:0 "£temperature_hot_texticon  Hot acclimatization gain factor"
@@ -1063,9 +1063,9 @@
  modifier_unit_anti_air_design_cost_factor:0 "£tank_design_cost_texticon  Support Anti-Air Unit Design Cost"
  modifier_unit_anti_air_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Anti-Air Unit Design Cost"
  modifier_unit_mot_anti_air_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Motorized Anti-Air Unit Design Cost"
- modifier_unit_anti_tank_design_cost_factor:0 "£tank_design_cost_texticon  Support Anti-Tank Unit Design Cost"
- modifier_unit_anti_tank_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Anti-Tank Unit Design Cost"
- modifier_unit_mot_anti_tank_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Motorized Anti-Tank Unit Design Cost"
+ modifier_unit_anti_tank_design_cost_factor:0 "£tank_design_cost_texticon  Support Anti-Landship Unit Design Cost"
+ modifier_unit_anti_tank_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Anti-Landship Unit Design Cost"
+ modifier_unit_mot_anti_tank_brigade_design_cost_factor:0 "£tank_design_cost_texticon  Motorized Anti-Landship Unit Design Cost"
  modifier_unit_armored_car_design_cost_factor:0 "£tank_design_cost_texticon  Armored Car Unit Design Cost"
  modifier_unit_artillery_design_cost_factor:0 "£tank_design_cost_texticon  Support Artillery Unit Design Cost"
  modifier_unit_rocket_artillery_design_cost_factor:0 "£tank_design_cost_texticon  Support Rocket Artillery Unit Design Cost"
