--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -49,7 +49,7 @@
  infantry_equipment_4_short:0 "Advanced Weapons"
  infantry_equipment_4_desc:0 "Personal and crew served hi-tech weapons for infantry as well as the various other bits of kit a modern soldier needs. Further modernized to include personal highly advanced Rifles and other pieces of modern technology."
 
- field_kits_equipment:0 "Infantry Rations"
+ field_kits_equipment:0 "Field Kits"
  field_kits_equipment_desc:0 "Standard Rationing to keep our soldiers fed in the field."
  field_kits_equipment_0:0 "Basic Field Kits"
  field_kits_equipment_0_desc:0 "Field kits are an essential aspect of every soldiers military equipment. Includes basic cold meals and medicaments."
@@ -141,6 +141,18 @@
  light_tank_equipment_3_short:0 "L. Landship III"
  light_tank_equipment_3_desc:0 "Light Landships are small, agile landships which are able to both scout and fight lightly armored opponents."
 
+ light_tank_artillery_equipment:0 "Light SP Artillery"
+ light_tank_artillery_equipment_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
+ light_tank_artillery_equipment_1:0 "Light SP Artillery I"
+ light_tank_artillery_equipment_1_short:0 "L. SPG I"
+ light_tank_artillery_equipment_1_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
+ light_tank_artillery_equipment_2:0 "Light SP Artillery II"
+ light_tank_artillery_equipment_2_short:0 "L. SPG II"
+ light_tank_artillery_equipment_2_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
+ light_tank_artillery_equipment_3:0 "Light SP Artillery III"
+ light_tank_artillery_equipment_3_short:0 "L. SPG III"
+ light_tank_artillery_equipment_3_desc:0 "A small artillery cannon mounted on a light chassis, a light SPG does not pack the firepower of its larger brethren, but they are more mobile."
+
  light_tank_destroyer_equipment:0 "Light Landship Destroyer"
  light_tank_destroyer_equipment_short:0 "L. Landship Destroyer"
  light_tank_destroyer_equipment_desc:0 "Landship Destroyers are landships with a larger than normal gun in a fixed mounting in place of a turret. Light Landship Destroyers are based on the chassis of Light Landships, which means they are fairly mobile but do not carry particularly powerful guns compared to heavier LDs."
@@ -166,18 +178,28 @@
  light_tank_aa_equipment_3_short:0 "L. AA III"
  light_tank_aa_equipment_3_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets. This model is mounted on the chassis of a light landship."
 
+ light_tank_flame_equipment:0 "Light Flame Tank"
+ light_tank_flame_equipment_1:0 "Light Flame Tank I"
+ light_tank_flame_equipment_2:0 "Light Flame Tank II"
+ light_tank_flame_equipment_3:0 "Light Flame Tank III"
+
+ light_tank_amphibious_equipment:0 "Amphibious Light Tank"
+ light_tank_amphibious_equipment_1:0 "Amphibious Light Tank I"
+ light_tank_amphibious_equipment_2:0 "Amphibious Light Tank II"
+ light_tank_amphibious_equipment_3:0 "Amphibious Light Tank III"
+
  medium_tank_equipment:0 "Medium Landship"
  medium_tank_equipment_desc:0 "Medium landships are reasonably agile multi-purpose landships which are able to take on many roles such as scouts, support, or even front-line landships."
  medium_tank_equipment_1:0 "Medium Landship I"
  medium_tank_equipment_1_short:0 "M. Landship I"
  medium_tank_equipment_1_desc:0 "Medium landships are reasonably agile multi-purpose landships which are able to take on many roles such as scouts, support, or even front-line landships."
 
- medium_tank_equipment_2:0 "Medium Landship I"
- medium_tank_equipment_2_short:0 "M. Landship I"
+ medium_tank_equipment_2:0 "Medium Landship II"
+ medium_tank_equipment_2_short:0 "M. Landship II"
  medium_tank_equipment_2_desc:0 "Medium landships are reasonably agile multi-purpose landships which are able to take on many roles such as scouts, support, or even front-line landships."
 
- medium_tank_equipment_3:0 "Medium Landship I"
- medium_tank_equipment_3_short:0 "M. Landship I"
+ medium_tank_equipment_3:0 "Medium Landship III"
+ medium_tank_equipment_3_short:0 "M. Landship III"
  medium_tank_equipment_3_desc:0 "Medium landships are reasonably agile multi-purpose landships which are able to take on many roles such as scouts, support, or even front-line landships."
 
  medium_tank_artillery_equipment:0 "Medium SP Artillery"
@@ -218,6 +240,16 @@
  medium_tank_aa_equipment_3_short:0 "M. AA III"
  medium_tank_aa_equipment_3_desc:0 "Mobile anti-air artillery mounted on a medium landship chassis."
 
+ medium_tank_flame_equipment:0 "Medium Flame Tank"
+ medium_tank_flame_equipment_1:0 "Medium Flame Tank I"
+ medium_tank_flame_equipment_2:0 "Medium Flame Tank II"
+ medium_tank_flame_equipment_3:0 "Medium Flame Tank III"
+
+ medium_tank_amphibious_equipment:0 "Amphibious Medium Tank"
+ medium_tank_amphibious_equipment_1:0 "Amphibious Medium Tank I"
+ medium_tank_amphibious_equipment_2:0 "Amphibious Medium Tank II"
+ medium_tank_amphibious_equipment_3:0 "Amphibious Medium Tank III"
+
  amphibious_tank_equipment:0 "Amphibious Barrels"
  amphibious_tank_equipment_short:0 "Amphib. Barrels"
  amphibious_tank_equipment_1:0 "Basic Barrel"
@@ -242,6 +274,18 @@
  heavy_tank_equipment_3_short:0 "H. Landship III"
  heavy_tank_equipment_3_desc:0 "Heavy landships are large, armored monsters which are designed to destroy enemy landships and fortifications."
 
+ heavy_tank_artillery_equipment:0 "Heavy SP Artillery"
+ heavy_tank_artillery_equipment_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
+ heavy_tank_artillery_equipment_1:0 "Heavy SP Artillery I"
+ heavy_tank_artillery_equipment_1_short:0 "H. SPG I"
+ heavy_tank_artillery_equipment_1_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
+ heavy_tank_artillery_equipment_2:0 "Heavy SP Artillery II"
+ heavy_tank_artillery_equipment_2_short:0 "H. SPG II"
+ heavy_tank_artillery_equipment_2_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
+ heavy_tank_artillery_equipment_3:0 "Heavy SP Artillery III"
+ heavy_tank_artillery_equipment_3_short:0 "H. SPG III"
+ heavy_tank_artillery_equipment_3_desc:0 "A large artillery piece mounted on a heavy chassis, these self-propelled guns carry a lot of firepower."
+
  heavy_tank_destroyer_equipment:0 "Heavy Landship Destroyer"
  heavy_tank_destroyer_equipment_short:0 "H. Landship Destroyer"
  heavy_tank_destroyer_equipment_desc:0 "A heavy landship with the turret removed to carry an even larger gun in a fixed mounting."
@@ -255,11 +299,39 @@
  heavy_tank_destroyer_equipment_3_short:0 "H. LD III"
  heavy_tank_destroyer_equipment_3_desc:0 "A heavy landship with the turret removed to carry an even larger gun in a fixed mounting."
 
+ heavy_tank_aa_equipment:0 "Heavy SP Anti-Air"
+ heavy_tank_aa_equipment_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
+ heavy_tank_aa_equipment_1:0 "Heavy SP Anti-Air I"
+ heavy_tank_aa_equipment_1_short:0 "H. AA I"
+ heavy_tank_aa_equipment_1_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
+ heavy_tank_aa_equipment_2:0 "Heavy SP Anti-Air II"
+ heavy_tank_aa_equipment_2_short:0 "H. AA II"
+ heavy_tank_aa_equipment_2_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
+ heavy_tank_aa_equipment_3:0 "Heavy SP Anti-Air III"
+ heavy_tank_aa_equipment_3_short:0 "H. AA III"
+ heavy_tank_aa_equipment_3_desc:0 "A powerful anti-air armament mounted on a heavy chassis."
+
+ heavy_tank_flame_equipment:0 "Heavy Flame Tank"
+ heavy_tank_flame_equipment_1:0 "Heavy Flame Tank I"
+ heavy_tank_flame_equipment_2:0 "Heavy Flame Tank II"
+ heavy_tank_flame_equipment_3:0 "Heavy Flame Tank III"
+
+ heavy_tank_amphibious_equipment:0 "Amphibious Heavy Tank"
+ heavy_tank_amphibious_equipment_1:0 "Amphibious Heavy Tank I"
+ heavy_tank_amphibious_equipment_2:0 "Amphibious Heavy Tank II"
+ heavy_tank_amphibious_equipment_3:0 "Amphibious Heavy Tank III"
+
  super_heavy_tank_equipment:0 "Super Heavy Landship"
  super_heavy_tank_equipment_desc:0 "Super heavy landships are an evolution of the Heavy landship concept. Bigger, better armed, with more armor, they are also slower and have severe problems with soft ground and few bridges can hope to handle their weight."
  super_heavy_tank_equipment_1:0 "Super Heavy Landship"
  super_heavy_tank_equipment_1_short:0 "SH. Landship"
  super_heavy_tank_equipment_1_desc:0 "Super heavy landships are an evolution of the Heavy landship concept. Bigger, better armed, with more armor, they are also slower and have severe problems with soft ground and few bridges can hope to handle their weight."
+
+ super_heavy_tank_artillery_equipment:0 "SH. SP Artillery"
+ super_heavy_tank_artillery_equipment_desc:0 "Massive artillery cannons mounted on super heavy chassis."
+ super_heavy_tank_artillery_equipment_1:0 "Super Heavy SP Artillery"
+ super_heavy_tank_artillery_equipment_1_short:0 "SH. SPG"
+ super_heavy_tank_artillery_equipment_1_desc:0 "Massive artillery cannons mounted on super heavy chassis."
 
  super_heavy_tank_destroyer_equipment:0 "Super Heavy SP Landship Destroyer"
  super_heavy_tank_destroyer_equipment_short:0 "SH. Landship Destroyer"
@@ -291,6 +363,12 @@
  modern_tank_destroyer_equipment_1:0 "Modern Landship Destroyer"
  modern_tank_destroyer_equipment_1_short:0 "Modern LD"
  modern_tank_destroyer_equipment_1_desc:0 "Modern Landship Destroyers are an evolution of earlier light and medium LDs, preferring mobility and stealth to heavy armor."
+
+ modern_tank_aa_equipment:0 "Modern SP Anti-Air"
+ modern_tank_aa_equipment_desc:0 "A combination of anti-air missiles and rapid fire cannon, modern anti-air artillery presents a deadly threat to aircraft."
+ modern_tank_aa_equipment_1:0 "Modern SP Anti-Air"
+ modern_tank_aa_equipment_1_short:0 "Modern AA"
+ modern_tank_aa_equipment_1_desc:0 "A combination of anti-air missiles and rapid fire cannon, modern anti-air artillery presents a deadly threat to aircraft."
 
   ## ARMOR TAB NSB
 
@@ -556,6 +634,9 @@
  anti_air_equipment_2_desc:0 "Anti-air guns with longer cartridges and barrels, able to target high-flying aircraft."
  anti_air_equipment_3:0 "Advanced Anti-Air"
  anti_air_equipment_3_desc:1 "An advanced mobile flak gun with greater reach and firing capacity, to combat even the fastest and highest-flying enemy aircraft."
+ rocket_artillery_equipment:0 "Towed Rocket Artillery"
+ rocket_artillery_equipment_short:0 "Rocket Artillery"
+ rocket_artillery_equipment_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
  rocket_artillery_equipment_1:0 "Towed Rocket Artillery"
  rocket_artillery_equipment_1_short:0 "Rocket Artillery"
  rocket_artillery_equipment_1_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
@@ -564,7 +645,7 @@
  anti_tank_equipment_2:0 "Improved Anti-Landship"
  anti_tank_equipment_2_desc:0 "Larger caliber guns to combat heavier landships with sloped armor."
  anti_tank_equipment_3:0 "Advanced Anti-Landship"
- anti_tank_equipment_3_desc:0 "Combining different kinds of new ammunition technology with guns with higher muzzle velocities, these anti-tank guns are prepared for whatever new armor our enemies may develop." 
+ anti_tank_equipment_3_desc:0 "Combining different kinds of new ammunition technology with guns with higher muzzle velocities, these anti-landship guns are prepared for whatever new armor our enemies may develop." 
  anti_tank_equipment_1:0 "Towed Anti-Landship"
  anti_tank_equipment_1_short:0 "Anti-Landship"
  anti_tank_equipment_1_desc:0 "Artillery specialized in defeating armored targets like Landships, it generally fires armor piercing shells."
@@ -1147,8 +1228,8 @@ tank_gun_upgrade:0 "Main Gun"
 tank_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
 tank_aa_upgrade:0 "Anti-Air Armament"
 tank_aa_upgrade_desc:0 "Ensure that our Anti-Air Armament is able to shoot down the latest planes."
-tank_at_upgrade:0 "Anti-Tank Armament"
-tank_at_upgrade_desc:0 "Ensure that our tank destroyers can defeat the latest enemy tanks."
+tank_at_upgrade:0 "Anti-Landship Armament"
+tank_at_upgrade_desc:0 "Ensure that our landship destroyers can defeat the latest enemy landships."
 tank_art_upgrade:0 "Artillery Armament"
 tank_art_upgrade_desc:1 "Ensure that our self propelled artillery have massive firepower that will tear through any unarmored enemies"
 tank_reliability_upgrade:0 "Reliability"
@@ -1166,8 +1247,8 @@ automat_gun_upgrade:0 "Main Gun"
 automat_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
 automat_aa_upgrade:0 "Anti-Air Armament"
 automat_aa_upgrade_desc:0 "Ensure that our Anti-Air Armament is able to shoot down the latest planes."
-automat_at_upgrade:0 "Anti-Tank Armament"
-automat_at_upgrade_desc:0 "Ensure that our tank destroyers can defeat the latest enemy tanks."
+automat_at_upgrade:0 "Anti-Landship Armament"
+automat_at_upgrade_desc:0 "Ensure that our landship destroyers can defeat the latest enemy landships."
 automat_art_upgrade:0 "Artillery Armament"
 automat_art_upgrade_desc:1 "Ensure that our self propelled artillery have massive firepower that will tear through any unarmored enemies"
 automat_reliability_upgrade:0 "Reliability"
@@ -1259,7 +1340,7 @@ plane_armor_upgrade_desc:0 "Self-sealing fuel tanks and armor plates improve sur
  EQUIPMENT_SUPPORT:0 "Support"
  EQUIPMENT_ANTI_AIR:0 "Anti-Air"
  EQUIPMENT_ARTILLERY:0 "Artillery"
- EQUIPMENT_ANTI_TANK:0 "Anti-Tank"
+ EQUIPMENT_ANTI_TANK:0 "Anti-Landship"
  EQUIPMENT_ROCKET:0 "Rocket"
  EQUIPMENT_FLAME:0 "Flame"
  EQUIPMENT_MISSILE:0 "Missile/Rocket"
@@ -1450,7 +1531,7 @@ plane_armor_upgrade_desc:0 "Self-sealing fuel tanks and armor plates improve sur
  land_cruiser_equipment_1_desc: "$land_cruiser_chassis_desc$"
  GER_land_cruiser_equipment_1: "Landkreuzer P.1000 Ratte"
  GER_land_cruiser_equipment_1_short: "Ratte"
- GER_land_cruiser_equipment_1_desc: "The P.1000 Ratte was a German concept for a super-heavy tank developed during World War II. Proposed by Krupp in 1942, the design envisioned a 1000-ton armored behemoth armed with two 280mm naval guns, multiple secondary weapons, and armor up to 360mm thick. The Ratte was intended to serve as a mobile fortress capable of overwhelming any battlefield opposition. However, due to its immense size, high fuel consumption, and logistical impracticalities, the project was deemed unfeasible and was ultimately canceled in 1943."
+ GER_land_cruiser_equipment_1_desc: "The P.1000 Ratte was a German concept for a super-heavy landship developed during World War II. Proposed by Krupp in 1942, the design envisioned a 1000-ton armored behemoth armed with two 280mm naval guns, multiple secondary weapons, and armor up to 360mm thick. The Ratte was intended to serve as a mobile fortress capable of overwhelming any battlefield opposition. However, due to its immense size, high fuel consumption, and logistical impracticalities, the project was deemed unfeasible and was ultimately canceled in 1943."
 
  helicopter_equipment: "Helicopter"
  helicopter_equipment_short: "Helicopter"
