more designer bg icons and fixes

--- a/localisation/english/PB_Designer_l_english.yml
+++ b/localisation/english/PB_Designer_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 
+### TITLES ### - since we have both automats and helis designers
+ TANK_DESIGNER_TITLE:0 "Armor Designer"
+ PLANE_DESIGNER_TITLE:0 "Aircraft Designer"
+
 ### TYPES ###
  tank_designer_light_tank_chassis:0 "Light Landship"
  tank_designer_medium_tank_chassis:0 "Medium Landship"
@@ -10,7 +14,7 @@
  tank_designer_anti_tank:0 "Landship Destroyer"
  tank_designer_anti_tank_role_disallowed:0 "Add a module that allows the §HLandship Destroyer§! role to be able to switch to it."
 
- tank_designer_duopod_automat_chassis:0 "Light Duopod Automat"
+ tank_designer_duopod_automat_chassis:0 "Duopod Automat"
  tank_designer_tripod_automat_chassis:0 "Tripod Automat"
  tank_designer_quadropod_automat_chassis:0 "Quadropod Automat"
 
