--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -546,14 +546,14 @@
  duopod_automat_archetype:0 "Duopods"
  duopod_automat_equipment_0:0 "Great War Automat"
 
- duopod_automat_equipment_1:0 "Light Duopod I"
- duopod_automat_equipment_1_desc:0 "The Duopod is the culmination of fixing the mistakes of our Great War automats. Fixing the instability of the design and turning it into a faster, sleaker weapon. While it still sports the thin armor of its predecessor, the Light Duopod remains a cheap and fast option to add to our impressive arsenal." 
+ duopod_automat_equipment_1:0 "Duopod I"
+ duopod_automat_equipment_1_desc:0 "The Duopod is the culmination of fixing the mistakes of our Great War automats. Fixing the instability of the design and turning it into a faster, sleaker weapon. While it still sports the thin armor of its predecessor, the Duopod remains a cheap and fast option to add to our impressive arsenal." 
 
- duopod_automat_equipment_2:0 "Light Duopod II"
- duopod_automat_equipment_2_desc:0 "The Mark II of the Light Duopod is furthering the design philosophy of the very first Duopod. Turning the flaws of the first Automats on their head, the Mark II further stabilizes the wonky \"legs\" of the machine, allowing for greater speeds and breakthrough. While the light armor gets a slight improvement over the old Duopod design, the Mark II still sports a slender and light armor design, allowing it to be produced even cheaper than the old Duopods."
+ duopod_automat_equipment_2:0 "Duopod II"
+ duopod_automat_equipment_2_desc:0 "The Mark II of the Duopod is furthering the design philosophy of the very first Duopod. Turning the flaws of the first Automats on their head, the Mark II further stabilizes the wonky \"legs\" of the machine, allowing for greater speeds and breakthrough. While the light armor gets a slight improvement over the old Duopod design, the Mark II still sports a slender and light armor design, allowing it to be produced even cheaper than the old Duopods."
 
- duopod_automat_equipment_3:0 "Light Duopod III"
- duopod_automat_equipment_3_desc:0 "The third variant of the Light Duopod exemplifies the perfecting of a craft. Mark III improves upon the characteristics of the old Duopods immensely, using more standardized parts that keep production costs low and the machine reliable. The perfecting of the Duopod's two legged transportation allows this version to reach speeds of 11/km per hour, turning it into a speed devil unmatched to most on the battlefield."
+ duopod_automat_equipment_3:0 "Duopod III"
+ duopod_automat_equipment_3_desc:0 "The third variant of the Duopod exemplifies the perfecting of a craft. Mark III improves upon the characteristics of the old Duopods immensely, using more standardized parts that keep production costs low and the machine reliable. The perfecting of the Duopod's two legged transportation allows this version to reach speeds of 11/km per hour, turning it into a speed devil unmatched to most on the battlefield."
 
  tripod_automat_equipment_0:0 "Tripod I"
  tripod_automat_equipment_0_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadrupods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadrupod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadrupod, nor does it have the speed or low production cost of the Duopod."
@@ -1439,6 +1439,10 @@ plane_armor_upgrade_desc:0 "Self-sealing fuel tanks and armor plates improve sur
  land_cruiser_equipment_1: "Land Cruiser"
  land_cruiser_equipment_1_short: "Land Cruiser"
  land_cruiser_equipment_1_desc: "$land_cruiser_chassis_desc$"
+
+ land_cruiser_chassis: "Land Cruiser Chassis"
+ land_cruiser_chassis_desc: "A gargantuan chassis, heavily-armored and designed to support super-heavy weaponry and withstand immense battlefield punishment, but with high fuel consumption and slow speed due to its enormous size."
+ land_cruiser_chassis_1: "Land Cruiser Chassis"
 
  helicopter_equipment: "Helicopter"
  helicopter_equipment_short: "Helicopter"
