Normandy & Siam characters

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1641,6 +1641,23 @@
   PHI_ds_party_long:0 "Ejército Revolucionario Filipino"
   PHI_ni_party:0 "Makagiting"
   PHI_ni_party_long:0 "Makagiting"
+  
+  SIA_jc_party:0 "Khana Ratsadon"
+  SIA_jc_party_long:0 "Khana Ratsadon"
+  SIA_ss_party:0 "Khana Ratsadon"
+  SIA_ss_party_long:0 "Khana Ratsadon"
+  SIA_lb_party:0 "Khana Ratsadon"
+  SIA_lb_party_long:0 "Khana Ratsadon"
+  SIA_cn_party:0 "Prajadhipok's Partisans"
+  SIA_cn_party_long:0 "Prajadhipok's Partisans"
+  SIA_an_party:0 "BRC"
+  SIA_an_party_long:0 "Burma Railway Condominium"
+  SIA_rc_party:0 "Siam Royal Party"
+  SIA_rc_party_long:0 "Siam Royal Party"
+  SIA_ds_party:0 "Siam Royal Party"
+  SIA_ds_party_long:0 "Siam Royal Party"
+  SIA_ni_party:0 "Khana Ratsadon"
+  SIA_ni_party_long:0 "Khana Ratsadon"
 
  ############
  # POLITICAL PARTY TEMPLATE 
