what have you done

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -54,10 +54,12 @@ culture_map_mode_tooltip: "[get_culture_map_mode_toggle_tooltip]"
 culture_map_mode_tooltip_delayed: "[get_culture_map_mode_toggle_tooltip_delayed]"
 culture_map_mode_0_tt: "View states' cultures."
 culture_map_mode_0_tooltip: "The main culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![FROM.get_state_culture_debug]"
-culture_map_mode_0_tooltip_delayed: "[FROM.get_state_culture_desc]"
+#culture_map_mode_0_tooltip_delayed: "[FROM.get_state_culture_desc]"
+culture_map_mode_0_tooltip_delayed: " "
 culture_map_mode_1_tt: "View other countries' main cultures."
 culture_map_mode_1_tooltip: "The main culture of §Y[FROM.controller.GetFlag][FROM.controller.GetNameDef]§! is §Y[FROM.controller.get_main_culture_name]§![FROM.controller.get_main_culture_debug]"
-culture_map_mode_1_tooltip_delayed: "[FROM.controller.get_main_culture_desc]"
+#culture_map_mode_1_tooltip_delayed: "[FROM.controller.get_main_culture_desc]"
+culture_map_mode_1_tooltip_delayed: " "
 culture_map_mode_2_tt: "View our accepted states and cultures."
 culture_map_mode_2_tooltip: "The main culture of [FROM.GetName], §Y[FROM.get_state_culture_name]§!, is[get_culture_map_mode_acceptance_status] accepted in [THIS.GetAdjective] society.[FROM.get_state_culture_debug]"
 culture_map_mode_2_tooltip_delayed: ""
@@ -70,9 +72,9 @@ PB_Cultures_set_main_culture_tt: "Set §Y[get_culture_name]§! as the main cultu
 
 ## -------- Simple View -------- ##
 PB_Culture_Expanded_Lore_tt: "§Y[THIS.GetName]§! state main culture is: §Y[get_state_culture_name]§![get_state_culture_debug]"
-PB_Culture_Expanded_Lore_tt_delayed: "[get_state_culture_desc]"
+#PB_Culture_Expanded_Lore_tt_delayed: "[get_state_culture_desc]"
 PB_Culture_Pol_Expanded_Lore_tt: "[get_pol_culture_name] [PB_Main_or_Accepted][get_pol_culture_debug]"
-PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
+#PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
 
 ## -------- Debug -------- ##
 PB_culture_0: "§RERROR§!"
