--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -134,7 +134,7 @@
   ##########################
   MENU_BAR_PAX_REPORT_PROBLEM: "Report a Problem"
   MENU_BAR_PAX_REPORT_PROBLEM_TT: "This button will redirect you straight to our §Ydiscord \"Bug Reporting\" thread§!"
-  PAX_SOCIALS_INGAME_TEXT: "Pax Brittanica Links:"
+  PAX_SOCIALS_INGAME_TEXT: "Pax Britannica Links:"
   HOI_SOCIALS_INGAME_TEXT: "Hearts of Iron IV Links:"
   ##########################
   # CHARACTERS
